[gd_scene load_steps=15 format=2]

[ext_resource path="res://Theme/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Theme/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Battle/ArtAssets/New_Piskel-2.png_2.png" type="Texture" id=4]
[ext_resource path="res://GUI/OptionsPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/ExtrasPopUp.tscn" type="PackedScene" id=6]
[ext_resource path="res://MainMenu/arrow.png" type="Texture" id=7]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3840, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Scroll"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BG:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2560, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Buttons:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( -3840, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( -0.367714, 0, 1358.69, 90.4925 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/Scroll = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 48.0
margin_right = -20.0
margin_bottom = -144.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1240.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "Party in the UFO!"
align = 1

[node name="OptionsPopup" parent="VBoxContainer" instance=ExtResource( 5 )]

[node name="Buttons" type="HBoxContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 20.0
margin_top = 608.0
margin_right = 1260.0
margin_bottom = 666.0
alignment = 1

[node name="Start" type="Button" parent="Buttons"]
margin_right = 307.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Start"

[node name="Option" type="Button" parent="Buttons"]
margin_left = 311.0
margin_right = 618.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Option"

[node name="Extras" type="Button" parent="Buttons"]
margin_left = 622.0
margin_right = 929.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Extras"

[node name="Quit" type="Button" parent="Buttons"]
margin_left = 933.0
margin_right = 1240.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Quit"

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fade")
anims/Fade = SubResource( 4 )
anims/FadeOut = SubResource( 6 )
anims/RESET = SubResource( 5 )

[node name="ExtrasPopUp" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Tutorial Pointer" type="Label" parent="."]
margin_left = 640.0
margin_top = 544.0
margin_right = 960.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 9 )
text = "Tutorial "
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Tutorial Pointer"]
position = Vector2( 64, 32 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Tutorial Pointer"]
position = Vector2( 256, 32 )
texture = ExtResource( 7 )

[connection signal="closed" from="VBoxContainer/OptionsPopup" to="." method="_on_OptionsPopup_closed"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="Buttons/Extras" to="." method="_on_Extras_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="closed" from="ExtrasPopUp" to="." method="_on_OptionsPopup_closed"]

[editable path="VBoxContainer/OptionsPopup"]
